Upgrade dependencies and fix unit tests.