@@ -40,9 +40,9 @@
 
     <!-- Parent Project -->
     <parent>
-        <groupId>org.forgerock</groupId>
-        <artifactId>forgerock-parent</artifactId>
-        <version>2.0.8</version>
+        <groupId>org.wrensecurity</groupId>
+        <artifactId>wrensec-parent</artifactId>
+        <version>3.2.1-SNAPSHOT</version>
     </parent>
 
     <!-- Component Definition -->
@@ -89,15 +89,17 @@
 
     <!-- Component Properties -->
     <properties>
+        <pgpWhitelistArtifact>org.wrensecurity:wrensec-pgp-whitelist:1.5.4</pgpWhitelistArtifact>
+
         <!-- **************************************************************** -->
         <maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss</maven.build.timestamp.format>
         <!-- **************************************************************** -->
 
         <!-- Surefire Argument Line -->
-        <java.surefire.options>-Xms256m -Xmx256m -XX:MaxPermSize=96m</java.surefire.options>
+        <java.surefire.options>-Xms256m -Xmx256m</java.surefire.options>
 
         <!-- JavaDoc Setting Properties -->
-        <javadoc.options>-J-Xms2g -J-Xmx2g -J-XX:MaxPermSize=512m</javadoc.options>
+        <javadoc.options>-J-Xms2g -J-Xmx2g</javadoc.options>
         <!-- Shade plugin setting for ClientSDK build -->
         <generate.clientsdk.sources>false</generate.clientsdk.sources>
 
@@ -105,22 +107,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Version Properties -->
-        <opendj.server.version>4.0.0-M1</opendj.server.version>
-        <opendj.sdk.version>4.0.0-M1</opendj.sdk.version>
-        <opendj.server.legacy>4.0.0-M1</opendj.server.legacy>
+        <opendj.server.version>4.0.0-M3</opendj.server.version>
+        <opendj.sdk.version>4.0.0-M3</opendj.sdk.version>
+        <opendj.server.legacy>4.0.0-M3</opendj.server.legacy>
 
         <!-- Supress checkstyle errors on legacy com.iplanet and com.sun.identity packages -->
         <checkstyleUnitTestSuppressionsLocation>checkstyle/suppressions.xml</checkstyleUnitTestSuppressionsLocation>
 
         <forgerock.bloomfilter.version>1.0.1</forgerock.bloomfilter.version>
-        <forgerock.ui.version>15.2.6</forgerock.ui.version>
-        <forgerock.guice.version>1.1.0</forgerock.guice.version>
+        <forgerock.ui.version>22.1.0-SNAPSHOT</forgerock.ui.version>
+        <forgerock.guice.version>2.0.0</forgerock.guice.version>
 
         <javadoc-utils.version>1.0.0</javadoc-utils.version>
         <ant.contrib.version>1.0b3</ant.contrib.version>
         <guice.version>3.0</guice.version>
         <restlet.version>2.3.4</restlet.version>
-        <powermock.version>1.6.6</powermock.version>
+        <powermock.version>2.0.9</powermock.version>
         <slf4j.version>1.7.21</slf4j.version>
         <santuario.xmlsec.version>1.5.6</santuario.xmlsec.version>
         <click.version>2.3.0</click.version>
@@ -140,8 +142,8 @@
         <jaxb.version>1.0.6</jaxb.version>
         <jaxb1.version>2.0.2</jaxb1.version>
         <jaxrpc-api.version>1.1</jaxrpc-api.version>
-        <jaxrpc-impl.version>1.1.3_01-20160905</jaxrpc-impl.version>
-        <jaxrpc-spi.version>1.1.3_01</jaxrpc-spi.version>
+        <jaxrpc-impl.version>1.1.4_01-wren1</jaxrpc-impl.version>
+        <jaxrpc-spi.version>1.1.4_01-wren1</jaxrpc-spi.version>
         <jdom.version>2.0.1</jdom.version>
         <je.version>5.0.104</je.version>
         <jersey-bundle.version>1.1.1-ea</jersey-bundle.version>
@@ -497,89 +499,43 @@
 
     <!-- Maven Repositories -->
     <repositories>
-        <!-- ForgeRock Common Internal Project Repositories -->
+
         <repository>
-            <id>forgerock-staging-repository</id>
-            <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
+            <id>wrensecurity-releases</id>
+            <name>Wren Security Release Repository</name>
+            <url>https://wrensecurity.jfrog.io/wrensecurity/releases</url>
+
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
 
-        <repository>
-            <id>forgerock-snapshots-repository</id>
-            <name>ForgeRock Snapshot Repository</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-
-        <!-- ForgeRock Internal Project Repository -->
-        <repository>
-            <id>maven.forgerock.org</id>
-            <name>maven.forgerock.org-openam-dependencies</name>
-            <url>http://maven.forgerock.org/repo/openam-dependencies</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
 
         <repository>
-            <id>restlet-cache</id>
-            <name>Restlet Cache Repository</name>
-            <url>http://maven.forgerock.org/repo/maven.restlet.org</url>
+            <id>wrensecurity-snapshots</id>
+            <name>Wren Security Snapshot Repository</name>
+            <url>https://wrensecurity.jfrog.io/wrensecurity/snapshots</url>
+
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+
             <releases>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-
-        <repository>
-            <id>oracle-repository</id>
-            <name>Oracle Repository</name>
-            <url>http://download.oracle.com/maven</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
         </repository>
     </repositories>
-
-    <!-- For Deployment to ForgeRock Maven Repository -->
-    <distributionManagement>
-        <repository>
-            <id>maven.forgerock.org</id>
-            <name>maven.forgerock.org-releases</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>maven.forgerock.org</id>
-            <name>maven.forgerock.org-snapshots</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
-        </snapshotRepository>
-        <site>
-            <id>forgerock.org</id>
-            <name>OpenAM Project</name>
-            <url>${siteDistributionURL}</url>
-        </site>
-    </distributionManagement>
 
     <!-- Source Control -->
     <scm>
         <connection>scm:git:ssh://git@stash.forgerock.org:7999/openam/openam.git</connection>
         <developerConnection>scm:git:ssh://git@stash.forgerock.org:7999/openam/openam.git</developerConnection>
         <url>https://stash.forgerock.org/projects/OPENAM/repos/openam/browse</url>
-      <tag>release/13.0.0</tag>
-  </scm>
+        <tag>release/13.0.0</tag>
+    </scm>
 
     <!-- Dependency Management -->
     <dependencyManagement>
@@ -587,7 +543,7 @@
             <dependency>
                 <groupId>org.forgerock.commons</groupId>
                 <artifactId>commons-bom</artifactId>
-                <version>21.0.0-alpha-23</version>
+                <version>22.1.0-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -635,17 +591,17 @@
                 <version>${project.version}</version>
             </dependency>
 
-	        <dependency>
-	        	<groupId>org.forgerock.openam</groupId>
-	        	<artifactId>openam-radius-common</artifactId>
-	        	<version>${project.version}</version>
-	        </dependency>
+            <dependency>
+                <groupId>org.forgerock.openam</groupId>
+                <artifactId>openam-radius-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-	        <dependency>
-	        	<groupId>org.forgerock.openam</groupId>
-	        	<artifactId>openam-radius-server</artifactId>
-	        	<version>${project.version}</version>
-	        </dependency>
+            <dependency>
+                <groupId>org.forgerock.openam</groupId>
+                <artifactId>openam-radius-server</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.forgerock.openam</groupId>
@@ -1379,7 +1335,7 @@
             </dependency>
 
             <dependency>
-                <groupId>external</groupId>
+                <groupId>com.sun.xml.rpc</groupId>
                 <artifactId>jaxrpc-impl</artifactId>
                 <version>${jaxrpc-impl.version}</version>
             </dependency>
@@ -1823,6 +1779,12 @@
                 <groupId>org.forgerock.commons</groupId>
                 <artifactId>forgerock-guice-core</artifactId>
                 <version>${forgerock.guice.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.mockito</groupId>
+                        <artifactId>mockito-all</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.forgerock.commons</groupId>
@@ -1834,6 +1796,12 @@
                 <artifactId>forgerock-guice-test</artifactId>
                 <version>${forgerock.guice.version}</version>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.mockito</groupId>
+                        <artifactId>mockito-all</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -1928,7 +1896,7 @@
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
-                <artifactId>powermock-api-mockito</artifactId>
+                <artifactId>powermock-api-mockito2</artifactId>
                 <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -2006,7 +1974,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
@@ -2248,8 +2216,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <!-- Local build for MSHADE-237 and MSHADE-182 -->
-                    <version>3.0.0-forgerock-alpha-1</version>
+                    <version>3.2.4</version>
                 </plugin>
                 <plugin>
                     <groupId>net.ju-n.maven.plugins</groupId>
